--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Maths for the Non-Mathematical
+title : Maths from the Group Up
 tagline: Chunking my way through the hard stuff
 author :
   name : Andrew Harmel-Law
