--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: ruby
+install: gem install jekyll html-proofer
+#script: jekyll build && htmlproofer ./_site
 script: ./build.sh
 branches:
   only:
