--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-install: gem install jekyll html-proofer
+install: gem install jekyll
 #script: jekyll build && htmlproofer ./_site
 script: ./build.sh
 branches:
